# vibe-agent

./: .gitignore  =3.8.0  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_KIMI.md  DESIGN.md  EVAL_SUITE.md  GEMINI.md  IMPROVEMENT_PLAN.md  LLM-connector.md  PLAN.md  PLAN_security_execution_control.md  README.md  ROADMAP.md  TODO.md  UNIFIED_PLAN.md  WIKI.md  google_dca_analysis.py  google_dca_memory.md  ma250_check.py  plan_eval_infrastructure.md  pyproject.toml  qqq_price.py  run_e2e_evals.py  stock_analysis_skill.py  stocks_analysis.py
_ref_core/: context_compactor.py  session.py
_ref_cw_core/: celery_config.py  config.py  database.py  llm.py  memory_cache.py  models.py  templates.py
_ref_cw_memory/: __init__.py  manager.py  wiki.py
_ref_tools/: bash_tool.py  file_tool.py  permission_gate.py  tool_system.py
_ref_utils/: llm_client.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  EVALUATION.md  HARNESS_TASKS.md  IMPLEMENTATION_PLAN_Phase1a.md  IMPLEMENTATION_PLAN_Phase1b.md  IMPLEMENTATION_PLAN_UNIFIED_FRAMEWORK.md  MEMORY_DESIGN.md  PLAN_MEMORY_RECOMMENDATIONS.md  PLAN_security_execution_control_v2.md  REVIEWS.md  ROADMAP.md  ROADMAP_phase3.md  SECURITY_HARNESS_IMPROVEMENTS.md  TRIPARTITE_DESIGN.md  TRIPARTITE_DESIGN_REVIEW_consolidated.md  TRIPARTITE_DESIGN_claude.md  TRIPARTITE_MEMORY_DESIGN.md  TRIPARTITE_MEMORY_DESIGN_REVIEW.md  TRIPARTITE_MEMORY_DESIGN_REVIEW_CLAUDE.md  TRIPARTITE_MEMORY_DESIGN_REVIEW_V2.md  TRIPARTITE_MEMORY_DESIGN_v4.md  TRIPARTITE_TASK_LIST_v4.md  UNIFIED_AGENT_FRAMEWORK.md  WORKLOG_2026-04-27_phase1a.md  drift_agent.py  (+4 more)
(+265 files in other folders)
